bharat/parser.out
Grammar:

Rule 0     S' -> statement
Rule 1     statement -> TYPE NAME
Rule 2     statement -> DO statement WHILE condition
Rule 3     statement -> TIME
Rule 4     statement -> NAME ( )
Rule 5     statement -> CLASS NAME : statement
Rule 6     statement -> FUNCTION NAME statement
Rule 7     statement -> IF condition THEN statement ELIF condition THEN statement ELSE statement
Rule 8     statement -> IF condition THEN statement
Rule 9     statement -> IF condition THEN statement ELSE statement
Rule 10    statement -> FOR NAME FROM expr TO expr DO statement
Rule 11    statement -> WHILE condition statement
Rule 12    statement -> var_assign
Rule 13    statement -> NAME RUN
Rule 14    statement -> array
Rule 15    statement -> expr
Rule 16    statement -> <empty>
Rule 17    expr -> RANDOMRANGE FROM expr TO expr
Rule 18    expr -> PRINT TIME
Rule 19    expr -> PRINT expr
Rule 20    expr -> FLOAT
Rule 21    expr -> STRING
Rule 22    expr -> NUMBER
Rule 23    expr -> NAME
Rule 24    expr -> - expr  [precedence=right, level=4]
Rule 25    expr -> NUM_INPUT
Rule 26    expr -> RAW_INPUT
Rule 27    expr -> expr > expr
Rule 28    expr -> expr < expr
Rule 29    expr -> NOT expr
Rule 30    expr -> expr AND expr
Rule 31    expr -> expr OR expr
Rule 32    expr -> expr EQ_GREATER expr
Rule 33    expr -> expr EQ_LESS expr
Rule 34    expr -> expr NOT_EQEQ expr
Rule 35    expr -> expr / expr  [precedence=left, level=3]
Rule 36    expr -> expr * expr  [precedence=left, level=3]
Rule 37    expr -> expr - expr  [precedence=left, level=2]
Rule 38    expr -> expr ADD expr  [precedence=left, level=2]
Rule 39    expr -> expr . expr  [precedence=left, level=1]
Rule 40    condition -> expr SHOMARANDE expr
Rule 41    condition -> expr EQEQ expr
Rule 42    var_assign -> NAME = bool
Rule 43    var_assign -> RETURN NAME
Rule 44    var_assign -> NAME = statement
Rule 45    var_assign -> NAME = array
Rule 46    var_assign -> NAME = expr
Rule 47    bool -> NOT bool
Rule 48    bool -> bool ANDALSO bool
Rule 49    bool -> BOOLEAN
Rule 50    array -> array [ expr ]
Rule 51    array -> array + STRING
Rule 52    array -> array + expr
Rule 53    array -> array + array
Rule 54    array -> NAME
Rule 55    array -> [ elements ]
Rule 56    elements -> statement , elements
Rule 57    elements -> statement

Terminals, with rules where they appear:

(                    : 4
)                    : 4
*                    : 36
+                    : 51 52 53
,                    : 56
-                    : 24 37
.                    : 39
/                    : 35
:                    : 5
<                    : 28
=                    : 42 44 45 46
>                    : 27
ADD                  : 38
AND                  : 30
ANDALSO              : 48
BOOLEAN              : 49
CLASS                : 5
DO                   : 2 10
ELIF                 : 7
ELSE                 : 7 9
EQEQ                 : 41
EQ_GREATER           : 32
EQ_LESS              : 33
FLOAT                : 20
FOR                  : 10
FROM                 : 10 17
FUNCTION             : 6
IF                   : 7 8 9
NAME                 : 1 4 5 6 10 13 23 42 43 44 45 46 54
NOT                  : 29 47
NOT_EQEQ             : 34
NUMBER               : 22
NUM_INPUT            : 25
OR                   : 31
PRINT                : 18 19
RANDOMRANGE          : 17
RAW_INPUT            : 26
RETURN               : 43
RUN                  : 13
SHOMARANDE           : 40
STRING               : 21 51
THEN                 : 7 7 8 9
TIME                 : 3 18
TO                   : 10 17
TYPE                 : 1
WHILE                : 2 11
[                    : 50 55
]                    : 50 55
error                : 

Nonterminals, with rules where they appear:

array                : 14 45 50 51 52 53 53
bool                 : 42 47 48 48
condition            : 2 7 7 8 9 11
elements             : 55 56
expr                 : 10 10 15 17 17 19 24 27 27 28 28 29 30 30 31 31 32 32 33 33 34 34 35 35 36 36 37 37 38 38 39 39 40 40 41 41 46 50 52
statement            : 2 5 6 7 7 7 8 9 9 10 11 44 56 57 0
var_assign           : 12


state 0

    (0) S' -> . statement
    (1) statement -> . TYPE NAME
    (2) statement -> . DO statement WHILE condition
    (3) statement -> . TIME
    (4) statement -> . NAME ( )
    (5) statement -> . CLASS NAME : statement
    (6) statement -> . FUNCTION NAME statement
    (7) statement -> . IF condition THEN statement ELIF condition THEN statement ELSE statement
    (8) statement -> . IF condition THEN statement
    (9) statement -> . IF condition THEN statement ELSE statement
    (10) statement -> . FOR NAME FROM expr TO expr DO statement
    (11) statement -> . WHILE condition statement
    (12) statement -> . var_assign
    (13) statement -> . NAME RUN
    (14) statement -> . array
    (15) statement -> . expr
    (16) statement -> .
    (42) var_assign -> . NAME = bool
    (43) var_assign -> . RETURN NAME
    (44) var_assign -> . NAME = statement
    (45) var_assign -> . NAME = array
    (46) var_assign -> . NAME = expr
    (50) array -> . array [ expr ]
    (51) array -> . array + STRING
    (52) array -> . array + expr
    (53) array -> . array + array
    (54) array -> . NAME
    (55) array -> . [ elements ]
    (17) expr -> . RANDOMRANGE FROM expr TO expr
    (18) expr -> . PRINT TIME
    (19) expr -> . PRINT expr
    (20) expr -> . FLOAT
    (21) expr -> . STRING
    (22) expr -> . NUMBER
    (23) expr -> . NAME
    (24) expr -> . - expr
    (25) expr -> . NUM_INPUT
    (26) expr -> . RAW_INPUT
    (27) expr -> . expr > expr
    (28) expr -> . expr < expr
    (29) expr -> . NOT expr
    (30) expr -> . expr AND expr
    (31) expr -> . expr OR expr
    (32) expr -> . expr EQ_GREATER expr
    (33) expr -> . expr EQ_LESS expr
    (34) expr -> . expr NOT_EQEQ expr
    (35) expr -> . expr / expr
    (36) expr -> . expr * expr
    (37) expr -> . expr - expr
    (38) expr -> . expr ADD expr
    (39) expr -> . expr . expr
    TYPE            shift and go to state 2
    DO              shift and go to state 4
    TIME            shift and go to state 6
    NAME            shift and go to state 3
    CLASS           shift and go to state 7
    FUNCTION        shift and go to state 8
    IF              shift and go to state 9
    FOR             shift and go to state 10
    WHILE           shift and go to state 5
    $end            reduce using rule 16 (statement -> .)
    RETURN          shift and go to state 14
    [               shift and go to state 15
    RANDOMRANGE     shift and go to state 17
    PRINT           shift and go to state 18
    FLOAT           shift and go to state 19
    STRING          shift and go to state 16
    NUMBER          shift and go to state 20
    -               shift and go to state 21
    NUM_INPUT       shift and go to state 22
    RAW_INPUT       shift and go to state 23
    NOT             shift and go to state 24

    statement                      shift and go to state 1
    expr                           shift and go to state 11
    var_assign                     shift and go to state 12
    array                          shift and go to state 13

state 1

    (0) S' -> statement .


state 2

    (1) statement -> TYPE . NAME
    NAME            shift and go to state 25


state 3

    (4) statement -> NAME . ( )
    (13) statement -> NAME . RUN
    (42) var_assign -> NAME . = bool
    (44) var_assign -> NAME . = statement
    (45) var_assign -> NAME . = array
    (46) var_assign -> NAME . = expr
    (54) array -> NAME .
    (23) expr -> NAME .
  ! reduce/reduce conflict for $end resolved using rule 23 (expr -> NAME .)
  ! reduce/reduce conflict for WHILE resolved using rule 23 (expr -> NAME .)
  ! reduce/reduce conflict for , resolved using rule 23 (expr -> NAME .)
  ! reduce/reduce conflict for ] resolved using rule 23 (expr -> NAME .)
  ! reduce/reduce conflict for ELIF resolved using rule 23 (expr -> NAME .)
  ! reduce/reduce conflict for ELSE resolved using rule 23 (expr -> NAME .)
    (               shift and go to state 26
    RUN             shift and go to state 27
    =               shift and go to state 28
    [               reduce using rule 54 (array -> NAME .)
    +               reduce using rule 54 (array -> NAME .)
    >               reduce using rule 23 (expr -> NAME .)
    <               reduce using rule 23 (expr -> NAME .)
    AND             reduce using rule 23 (expr -> NAME .)
    OR              reduce using rule 23 (expr -> NAME .)
    EQ_GREATER      reduce using rule 23 (expr -> NAME .)
    EQ_LESS         reduce using rule 23 (expr -> NAME .)
    NOT_EQEQ        reduce using rule 23 (expr -> NAME .)
    /               reduce using rule 23 (expr -> NAME .)
    *               reduce using rule 23 (expr -> NAME .)
    -               reduce using rule 23 (expr -> NAME .)
    ADD             reduce using rule 23 (expr -> NAME .)
    .               reduce using rule 23 (expr -> NAME .)
    $end            reduce using rule 23 (expr -> NAME .)
    WHILE           reduce using rule 23 (expr -> NAME .)
    ,               reduce using rule 23 (expr -> NAME .)
    ]               reduce using rule 23 (expr -> NAME .)
    ELIF            reduce using rule 23 (expr -> NAME .)
    ELSE            reduce using rule 23 (expr -> NAME .)


state 4

    (2) statement -> DO . statement WHILE condition
    (1) statement -> . TYPE NAME
    (2) statement -> . DO statement WHILE condition
    (3) statement -> . TIME
    (4) statement -> . NAME ( )
    (5) statement -> . CLASS NAME : statement
    (6) statement -> . FUNCTION NAME statement
    (7) statement -> . IF condition THEN statement ELIF condition THEN statement ELSE statement
    (8) statement -> . IF condition THEN statement
    (9) statement -> . IF condition THEN statement ELSE statement
    (10) statement -> . FOR NAME FROM expr TO expr DO statement
    (11) statement -> . WHILE condition statement
    (12) statement -> . var_assign
    (13) statement -> . NAME RUN
    (14) statement -> . array
    (15) statement -> . expr
    (16) statement -> .
    (42) var_assign -> . NAME = bool
    (43) var_assign -> . RETURN NAME
    (44) var_assign -> . NAME = statement
    (45) var_assign -> . NAME = array
    (46) var_assign -> . NAME = expr
    (50) array -> . array [ expr ]
    (51) array -> . array + STRING
    (52) array -> . array + expr
    (53) array -> . array + array
    (54) array -> . NAME
    (55) array -> . [ elements ]
    (17) expr -> . RANDOMRANGE FROM expr TO expr
    (18) expr -> . PRINT TIME
    (19) expr -> . PRINT expr
    (20) expr -> . FLOAT
    (21) expr -> . STRING
    (22) expr -> . NUMBER
    (23) expr -> . NAME
    (24) expr -> . - expr
    (25) expr -> . NUM_INPUT
    (26) expr -> . RAW_INPUT
    (27) expr -> . expr > expr
    (28) expr -> . expr < expr
    (29) expr -> . NOT expr
    (30) expr -> . expr AND expr
    (31) expr -> . expr OR expr
    (32) expr -> . expr EQ_GREATER expr
    (33) expr -> . expr EQ_LESS expr
    (34) expr -> . expr NOT_EQEQ expr
    (35) expr -> . expr / expr
    (36) expr -> . expr * expr
    (37) expr -> . expr - expr
    (38) expr -> . expr ADD expr
    (39) expr -> . expr . expr
  ! shift/reduce conflict for WHILE resolved as shift
    TYPE            shift and go to state 2
    DO              shift and go to state 4
    TIME            shift and go to state 6
    NAME            shift and go to state 3
    CLASS           shift and go to state 7
    FUNCTION        shift and go to state 8
    IF              shift and go to state 9
    FOR             shift and go to state 10
    WHILE           shift and go to state 5
    RETURN          shift and go to state 14
    [               shift and go to state 15
    RANDOMRANGE     shift and go to state 17
    PRINT           shift and go to state 18
    FLOAT           shift and go to state 19
    STRING          shift and go to state 16
    NUMBER          shift and go to state 20
    -               shift and go to state 21
    NUM_INPUT       shift and go to state 22
    RAW_INPUT       shift and go to state 23
    NOT             shift and go to state 24

    statement                      shift and go to state 29
    expr                           shift and go to state 11
    var_assign                     shift and go to state 12
    array                          shift and go to state 13

state 5

    (11) statement -> WHILE . condition statement
    (40) condition -> . expr SHOMARANDE expr
    (41) condition -> . expr EQEQ expr
    (17) expr -> . RANDOMRANGE FROM expr TO expr
    (18) expr -> . PRINT TIME
    (19) expr -> . PRINT expr
    (20) expr -> . FLOAT
    (21) expr -> . STRING
    (22) expr -> . NUMBER
    (23) expr -> . NAME
    (24) expr -> . - expr
    (25) expr -> . NUM_INPUT
    (26) expr -> . RAW_INPUT
    (27) expr -> . expr > expr
    (28) expr -> . expr < expr
    (29) expr -> . NOT expr
    (30) expr -> . expr AND expr
    (31) expr -> . expr OR expr
    (32) expr -> . expr EQ_GREATER expr
    (33) expr -> . expr EQ_LESS expr
    (34) expr -> . expr NOT_EQEQ expr
    (35) expr -> . expr / expr
    (36) expr -> . expr * expr
    (37) expr -> . expr - expr
    (38) expr -> . expr ADD expr
    (39) expr -> . expr . expr
    RANDOMRANGE     shift and go to state 17
    PRINT           shift and go to state 18
    FLOAT           shift and go to state 19
    STRING          shift and go to state 16
    NUMBER          shift and go to state 20
    NAME            shift and go to state 32
    -               shift and go to state 21
    NUM_INPUT       shift and go to state 22
    RAW_INPUT       shift and go to state 23
    NOT             shift and go to state 24

    condition                      shift and go to state 30
    expr                           shift and go to state 31

state 6

    (3) statement -> TIME .
    $end            reduce using rule 3 (statement -> TIME .)
    WHILE           reduce using rule 3 (statement -> TIME .)
    ,               reduce using rule 3 (statement -> TIME .)
    ]               reduce using rule 3 (statement -> TIME .)
    ELIF            reduce using rule 3 (statement -> TIME .)
    ELSE            reduce using rule 3 (statement -> TIME .)


state 7

    (5) statement -> CLASS . NAME : statement
    NAME            shift and go to state 33


state 8

    (6) statement -> FUNCTION . NAME statement
    NAME            shift and go to state 34


state 9

    (7) statement -> IF . condition THEN statement ELIF condition THEN statement ELSE statement
    (8) statement -> IF . condition THEN statement
    (9) statement -> IF . condition THEN statement ELSE statement
    (40) condition -> . expr SHOMARANDE expr
    (41) condition -> . expr EQEQ expr
    (17) expr -> . RANDOMRANGE FROM expr TO expr
    (18) expr -> . PRINT TIME
    (19) expr -> . PRINT expr
    (20) expr -> . FLOAT
    (21) expr -> . STRING
    (22) expr -> . NUMBER
    (23) expr -> . NAME
    (24) expr -> . - expr
    (25) expr -> . NUM_INPUT
    (26) expr -> . RAW_INPUT
    (27) expr -> . expr > expr
    (28) expr -> . expr < expr
    (29) expr -> . NOT expr
    (30) expr -> . expr AND expr
    (31) expr -> . expr OR expr
    (32) expr -> . expr EQ_GREATER expr
    (33) expr -> . expr EQ_LESS expr
    (34) expr -> . expr NOT_EQEQ expr
    (35) expr -> . expr / expr
    (36) expr -> . expr * expr
    (37) expr -> . expr - expr
    (38) expr -> . expr ADD expr
    (39) expr -> . expr . expr
    RANDOMRANGE     shift and go to state 17
    PRINT           shift and go to state 18
    FLOAT           shift and go to state 19
    STRING          shift and go to state 16
    NUMBER          shift and go to state 20
    NAME            shift and go to state 32
    -               shift and go to state 21
    NUM_INPUT       shift and go to state 22
    RAW_INPUT       shift and go to state 23
    NOT             shift and go to state 24

    condition                      shift and go to state 35
    expr                           shift and go to state 31

state 10

    (10) statement -> FOR . NAME FROM expr TO expr DO statement
    NAME            shift and go to state 36


state 11

    (15) statement -> expr .
    (27) expr -> expr . > expr
    (28) expr -> expr . < expr
    (30) expr -> expr . AND expr
    (31) expr -> expr . OR expr
    (32) expr -> expr . EQ_GREATER expr
    (33) expr -> expr . EQ_LESS expr
    (34) expr -> expr . NOT_EQEQ expr
    (35) expr -> expr . / expr
    (36) expr -> expr . * expr
    (37) expr -> expr . - expr
    (38) expr -> expr . ADD expr
    (39) expr -> expr . . expr
    $end            reduce using rule 15 (statement -> expr .)
    WHILE           reduce using rule 15 (statement -> expr .)
    ,               reduce using rule 15 (statement -> expr .)
    ]               reduce using rule 15 (statement -> expr .)
    ELIF            reduce using rule 15 (statement -> expr .)
    ELSE            reduce using rule 15 (statement -> expr .)
    >               shift and go to state 37
    <               shift and go to state 38
    AND             shift and go to state 39
    OR              shift and go to state 40
    EQ_GREATER      shift and go to state 41
    EQ_LESS         shift and go to state 42
    NOT_EQEQ        shift and go to state 43
    /               shift and go to state 44
    *               shift and go to state 45
    -               shift and go to state 46
    ADD             shift and go to state 47
    .               shift and go to state 48


state 12

    (12) statement -> var_assign .
    $end            reduce using rule 12 (statement -> var_assign .)
    WHILE           reduce using rule 12 (statement -> var_assign .)
    ,               reduce using rule 12 (statement -> var_assign .)
    ]               reduce using rule 12 (statement -> var_assign .)
    ELIF            reduce using rule 12 (statement -> var_assign .)
    ELSE            reduce using rule 12 (statement -> var_assign .)


state 13

    (14) statement -> array .
    (50) array -> array . [ expr ]
    (51) array -> array . + STRING
    (52) array -> array . + expr
    (53) array -> array . + array
    $end            reduce using rule 14 (statement -> array .)
    WHILE           reduce using rule 14 (statement -> array .)
    ,               reduce using rule 14 (statement -> array .)
    ]               reduce using rule 14 (statement -> array .)
    ELIF            reduce using rule 14 (statement -> array .)
    ELSE            reduce using rule 14 (statement -> array .)
    [               shift and go to state 49
    +               shift and go to state 50


state 14

    (43) var_assign -> RETURN . NAME
    NAME            shift and go to state 51


state 15

    (55) array -> [ . elements ]
    (56) elements -> . statement , elements
    (57) elements -> . statement
    (1) statement -> . TYPE NAME
    (2) statement -> . DO statement WHILE condition
    (3) statement -> . TIME
    (4) statement -> . NAME ( )
    (5) statement -> . CLASS NAME : statement
    (6) statement -> . FUNCTION NAME statement
    (7) statement -> . IF condition THEN statement ELIF condition THEN statement ELSE statement
    (8) statement -> . IF condition THEN statement
    (9) statement -> . IF condition THEN statement ELSE statement
    (10) statement -> . FOR NAME FROM expr TO expr DO statement
    (11) statement -> . WHILE condition statement
    (12) statement -> . var_assign
    (13) statement -> . NAME RUN
    (14) statement -> . array
    (15) statement -> . expr
    (16) statement -> .
    (42) var_assign -> . NAME = bool
    (43) var_assign -> . RETURN NAME
    (44) var_assign -> . NAME = statement
    (45) var_assign -> . NAME = array
    (46) var_assign -> . NAME = expr
    (50) array -> . array [ expr ]
    (51) array -> . array + STRING
    (52) array -> . array + expr
    (53) array -> . array + array
    (54) array -> . NAME
    (55) array -> . [ elements ]
    (17) expr -> . RANDOMRANGE FROM expr TO expr
    (18) expr -> . PRINT TIME
    (19) expr -> . PRINT expr
    (20) expr -> . FLOAT
    (21) expr -> . STRING
    (22) expr -> . NUMBER
    (23) expr -> . NAME
    (24) expr -> . - expr
    (25) expr -> . NUM_INPUT
    (26) expr -> . RAW_INPUT
    (27) expr -> . expr > expr
    (28) expr -> . expr < expr
    (29) expr -> . NOT expr
    (30) expr -> . expr AND expr
    (31) expr -> . expr OR expr
    (32) expr -> . expr EQ_GREATER expr
    (33) expr -> . expr EQ_LESS expr
    (34) expr -> . expr NOT_EQEQ expr
    (35) expr -> . expr / expr
    (36) expr -> . expr * expr
    (37) expr -> . expr - expr
    (38) expr -> . expr ADD expr
    (39) expr -> . expr . expr
    TYPE            shift and go to state 2
    DO              shift and go to state 4
    TIME            shift and go to state 6
    NAME            shift and go to state 3
    CLASS           shift and go to state 7
    FUNCTION        shift and go to state 8
    IF              shift and go to state 9
    FOR             shift and go to state 10
    WHILE           shift and go to state 5
    ,               reduce using rule 16 (statement -> .)
    ]               reduce using rule 16 (statement -> .)
    RETURN          shift and go to state 14
    [               shift and go to state 15
    RANDOMRANGE     shift and go to state 17
    PRINT           shift and go to state 18
    FLOAT           shift and go to state 19
    STRING          shift and go to state 16
    NUMBER          shift and go to state 20
    -               shift and go to state 21
    NUM_INPUT       shift and go to state 22
    RAW_INPUT       shift and go to state 23
    NOT             shift and go to state 24

    elements                       shift and go to state 52
    statement                      shift and go to state 53
    expr                           shift and go to state 11
    var_assign                     shift and go to state 12
    array                          shift and go to state 13

state 16

    (21) expr -> STRING .
    >               reduce using rule 21 (expr -> STRING .)
    <               reduce using rule 21 (expr -> STRING .)
    AND             reduce using rule 21 (expr -> STRING .)
    OR              reduce using rule 21 (expr -> STRING .)
    EQ_GREATER      reduce using rule 21 (expr -> STRING .)
    EQ_LESS         reduce using rule 21 (expr -> STRING .)
    NOT_EQEQ        reduce using rule 21 (expr -> STRING .)
    /               reduce using rule 21 (expr -> STRING .)
    *               reduce using rule 21 (expr -> STRING .)
    -               reduce using rule 21 (expr -> STRING .)
    ADD             reduce using rule 21 (expr -> STRING .)
    .               reduce using rule 21 (expr -> STRING .)
    $end            reduce using rule 21 (expr -> STRING .)
    WHILE           reduce using rule 21 (expr -> STRING .)
    SHOMARANDE      reduce using rule 21 (expr -> STRING .)
    EQEQ            reduce using rule 21 (expr -> STRING .)
    ,               reduce using rule 21 (expr -> STRING .)
    ]               reduce using rule 21 (expr -> STRING .)
    ELIF            reduce using rule 21 (expr -> STRING .)
    ELSE            reduce using rule 21 (expr -> STRING .)
    [               reduce using rule 21 (expr -> STRING .)
    +               reduce using rule 21 (expr -> STRING .)
    TO              reduce using rule 21 (expr -> STRING .)
    TYPE            reduce using rule 21 (expr -> STRING .)
    DO              reduce using rule 21 (expr -> STRING .)
    TIME            reduce using rule 21 (expr -> STRING .)
    NAME            reduce using rule 21 (expr -> STRING .)
    CLASS           reduce using rule 21 (expr -> STRING .)
    FUNCTION        reduce using rule 21 (expr -> STRING .)
    IF              reduce using rule 21 (expr -> STRING .)
    FOR             reduce using rule 21 (expr -> STRING .)
    RETURN          reduce using rule 21 (expr -> STRING .)
    RANDOMRANGE     reduce using rule 21 (expr -> STRING .)
    PRINT           reduce using rule 21 (expr -> STRING .)
    FLOAT           reduce using rule 21 (expr -> STRING .)
    STRING          reduce using rule 21 (expr -> STRING .)
    NUMBER          reduce using rule 21 (expr -> STRING .)
    NUM_INPUT       reduce using rule 21 (expr -> STRING .)
    RAW_INPUT       reduce using rule 21 (expr -> STRING .)
    NOT             reduce using rule 21 (expr -> STRING .)
    THEN            reduce using rule 21 (expr -> STRING .)


state 17

    (17) expr -> RANDOMRANGE . FROM expr TO expr
    FROM            shift and go to state 54


state 18

    (18) expr -> PRINT . TIME
    (19) expr -> PRINT . expr
    (17) expr -> . RANDOMRANGE FROM expr TO expr
    (18) expr -> . PRINT TIME
    (19) expr -> . PRINT expr
    (20) expr -> . FLOAT
    (21) expr -> . STRING
    (22) expr -> . NUMBER
    (23) expr -> . NAME
    (24) expr -> . - expr
    (25) expr -> . NUM_INPUT
    (26) expr -> . RAW_INPUT
    (27) expr -> . expr > expr
    (28) expr -> . expr < expr
    (29) expr -> . NOT expr
    (30) expr -> . expr AND expr
    (31) expr -> . expr OR expr
    (32) expr -> . expr EQ_GREATER expr
    (33) expr -> . expr EQ_LESS expr
    (34) expr -> . expr NOT_EQEQ expr
    (35) expr -> . expr / expr
    (36) expr -> . expr * expr
    (37) expr -> . expr - expr
    (38) expr -> . expr ADD expr
    (39) expr -> . expr . expr
    TIME            shift and go to state 55
    RANDOMRANGE     shift and go to state 17
    PRINT           shift and go to state 18
    FLOAT           shift and go to state 19
    STRING          shift and go to state 16
    NUMBER          shift and go to state 20
    NAME            shift and go to state 32
    -               shift and go to state 21
    NUM_INPUT       shift and go to state 22
    RAW_INPUT       shift and go to state 23
    NOT             shift and go to state 24

    expr                           shift and go to state 56

state 19

    (20) expr -> FLOAT .
    >               reduce using rule 20 (expr -> FLOAT .)
    <               reduce using rule 20 (expr -> FLOAT .)
    AND             reduce using rule 20 (expr -> FLOAT .)
    OR              reduce using rule 20 (expr -> FLOAT .)
    EQ_GREATER      reduce using rule 20 (expr -> FLOAT .)
    EQ_LESS         reduce using rule 20 (expr -> FLOAT .)
    NOT_EQEQ        reduce using rule 20 (expr -> FLOAT .)
    /               reduce using rule 20 (expr -> FLOAT .)
    *               reduce using rule 20 (expr -> FLOAT .)
    -               reduce using rule 20 (expr -> FLOAT .)
    ADD             reduce using rule 20 (expr -> FLOAT .)
    .               reduce using rule 20 (expr -> FLOAT .)
    $end            reduce using rule 20 (expr -> FLOAT .)
    WHILE           reduce using rule 20 (expr -> FLOAT .)
    SHOMARANDE      reduce using rule 20 (expr -> FLOAT .)
    EQEQ            reduce using rule 20 (expr -> FLOAT .)
    ,               reduce using rule 20 (expr -> FLOAT .)
    ]               reduce using rule 20 (expr -> FLOAT .)
    ELIF            reduce using rule 20 (expr -> FLOAT .)
    ELSE            reduce using rule 20 (expr -> FLOAT .)
    [               reduce using rule 20 (expr -> FLOAT .)
    +               reduce using rule 20 (expr -> FLOAT .)
    TO              reduce using rule 20 (expr -> FLOAT .)
    TYPE            reduce using rule 20 (expr -> FLOAT .)
    DO              reduce using rule 20 (expr -> FLOAT .)
    TIME            reduce using rule 20 (expr -> FLOAT .)
    NAME            reduce using rule 20 (expr -> FLOAT .)
    CLASS           reduce using rule 20 (expr -> FLOAT .)
    FUNCTION        reduce using rule 20 (expr -> FLOAT .)
    IF              reduce using rule 20 (expr -> FLOAT .)
    FOR             reduce using rule 20 (expr -> FLOAT .)
    RETURN          reduce using rule 20 (expr -> FLOAT .)
    RANDOMRANGE     reduce using rule 20 (expr -> FLOAT .)
    PRINT           reduce using rule 20 (expr -> FLOAT .)
    FLOAT           reduce using rule 20 (expr -> FLOAT .)
    STRING          reduce using rule 20 (expr -> FLOAT .)
    NUMBER          reduce using rule 20 (expr -> FLOAT .)
    NUM_INPUT       reduce using rule 20 (expr -> FLOAT .)
    RAW_INPUT       reduce using rule 20 (expr -> FLOAT .)
    NOT             reduce using rule 20 (expr -> FLOAT .)
    THEN            reduce using rule 20 (expr -> FLOAT .)


state 20

    (22) expr -> NUMBER .
    >               reduce using rule 22 (expr -> NUMBER .)
    <               reduce using rule 22 (expr -> NUMBER .)
    AND             reduce using rule 22 (expr -> NUMBER .)
    OR              reduce using rule 22 (expr -> NUMBER .)
    EQ_GREATER      reduce using rule 22 (expr -> NUMBER .)
    EQ_LESS         reduce using rule 22 (expr -> NUMBER .)
    NOT_EQEQ        reduce using rule 22 (expr -> NUMBER .)
    /               reduce using rule 22 (expr -> NUMBER .)
    *               reduce using rule 22 (expr -> NUMBER .)
    -               reduce using rule 22 (expr -> NUMBER .)
    ADD             reduce using rule 22 (expr -> NUMBER .)
    .               reduce using rule 22 (expr -> NUMBER .)
    $end            reduce using rule 22 (expr -> NUMBER .)
    WHILE           reduce using rule 22 (expr -> NUMBER .)
    SHOMARANDE      reduce using rule 22 (expr -> NUMBER .)
    EQEQ            reduce using rule 22 (expr -> NUMBER .)
    ,               reduce using rule 22 (expr -> NUMBER .)
    ]               reduce using rule 22 (expr -> NUMBER .)
    ELIF            reduce using rule 22 (expr -> NUMBER .)
    ELSE            reduce using rule 22 (expr -> NUMBER .)
    [               reduce using rule 22 (expr -> NUMBER .)
    +               reduce using rule 22 (expr -> NUMBER .)
    TO              reduce using rule 22 (expr -> NUMBER .)
    TYPE            reduce using rule 22 (expr -> NUMBER .)
    DO              reduce using rule 22 (expr -> NUMBER .)
    TIME            reduce using rule 22 (expr -> NUMBER .)
    NAME            reduce using rule 22 (expr -> NUMBER .)
    CLASS           reduce using rule 22 (expr -> NUMBER .)
    FUNCTION        reduce using rule 22 (expr -> NUMBER .)
    IF              reduce using rule 22 (expr -> NUMBER .)
    FOR             reduce using rule 22 (expr -> NUMBER .)
    RETURN          reduce using rule 22 (expr -> NUMBER .)
    RANDOMRANGE     reduce using rule 22 (expr -> NUMBER .)
    PRINT           reduce using rule 22 (expr -> NUMBER .)
    FLOAT           reduce using rule 22 (expr -> NUMBER .)
    STRING          reduce using rule 22 (expr -> NUMBER .)
    NUMBER          reduce using rule 22 (expr -> NUMBER .)
    NUM_INPUT       reduce using rule 22 (expr -> NUMBER .)
    RAW_INPUT       reduce using rule 22 (expr -> NUMBER .)
    NOT             reduce using rule 22 (expr -> NUMBER .)
    THEN            reduce using rule 22 (expr -> NUMBER .)


state 21

    (24) expr -> - . expr
    (17) expr -> . RANDOMRANGE FROM expr TO expr
    (18) expr -> . PRINT TIME
    (19) expr -> . PRINT expr
    (20) expr -> . FLOAT
    (21) expr -> . STRING
    (22) expr -> . NUMBER
    (23) expr -> . NAME
    (24) expr -> . - expr
    (25) expr -> . NUM_INPUT
    (26) expr -> . RAW_INPUT
    (27) expr -> . expr > expr
    (28) expr -> . expr < expr
    (29) expr -> . NOT expr
    (30) expr -> . expr AND expr
    (31) expr -> . expr OR expr
    (32) expr -> . expr EQ_GREATER expr
    (33) expr -> . expr EQ_LESS expr
    (34) expr -> . expr NOT_EQEQ expr
    (35) expr -> . expr / expr
    (36) expr -> . expr * expr
    (37) expr -> . expr - expr
    (38) expr -> . expr ADD expr
    (39) expr -> . expr . expr
    RANDOMRANGE     shift and go to state 17
    PRINT           shift and go to state 18
    FLOAT           shift and go to state 19
    STRING          shift and go to state 16
    NUMBER          shift and go to state 20
    NAME            shift and go to state 32
    -               shift and go to state 21
    NUM_INPUT       shift and go to state 22
    RAW_INPUT       shift and go to state 23
    NOT             shift and go to state 24

    expr                           shift and go to state 57

state 22
